# fuzzable

./: .gitignore  .gitmodules  .pylintrc  404.html  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  __init__.py  analysis.py  build.rs  functions.py  harness.cpp  index.html  linux_harness_template.cpp  plugin.json  pyproject.toml  requirements.txt
.github/workflows/: main.yml  release.yml
docs/: mkdocs.yml
examples/binaries/: basic  libbasic.so.1
examples/source/: basic.c  callgraph.c  fuzzable.c  libbasic.c
fuzzable/: __init__.py  __main__.py  analysis.py  cli.py  config.py  generate.py  log.py  main.py  metrics.py
fuzzable/analysis/: __init__.py  angr.py  ast.py  binja.py
plugin/: __init__.py  analysis.py
src/: errors.rs  lib.rs  main.rs
src/backends/: binja.rs  mod.rs  source.rs
templates/: linux.cpp  linux_closed_source_harness.cpp  linux_harness_template.cpp  linux_source_harness.cpp  windows.cpp
tests/: test_generate.py  test_main.py
tests/analysis/: test_angr.py
