[package]
name = "fuzzable"
description = "Framework for fuzzable target discovery"

authors = ["ex0dus-0x"]
license = "MIT"

homepage = "https://github.com/ex0dus-0x/fuzzable"
repository = "https://github.com/ex0dus-0x/fuzzable"
readme = "README.md"

version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "fuzzable"

[build-dependencies]
cc = "*"

[dependencies]
clap = { version = "3.1.9", features = ["derive"] }
walkdir = "2"

log = "0.4"
pretty_env_logger = "0.4"

tree-sitter = "0.20.6"
goblin = "0.5.1"
binaryninja = {git = "https://github.com/Vector35/binaryninja-api.git", branch = "dev"}