[tool.poetry]
name = "fuzzable"
version = "2.0.0"
description = "Framework for Automating Fuzzable Target Discovery with Static Analysis"
authors = [
    "Alan Cao <ex0dus@codemuch.tech>"
]
license = "MIT"
readme = "README.md"

homepage = "https://codemuch.tech/fuzzable"
repository = "https://github.com/ex0dus-0x/fuzzable"
documentation = "https://github.com/ex0dus-0x/fuzzable/wiki"

keywords = ["security", "fuzzing", "vulnerability-research", "binary-analysis"]

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.4.1"}
angr = "^9.2.8"
prettytable = "^3.3.0"
pycparser = "^2.21"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = { version = "^22.6.0", python = "^3.9" }

[tool.poetry.scripts]
fuzzable = "fuzzable.__main__:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target_version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
